@@ -2,6 +2,15 @@
  * $Id$
  */
 
+2010-12-03 09:11 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  *  src/common/wx_harbour.cpp
+     ! Fixed sample wxget, it needs undocumented function wxIsprint()
+       Thanks to Marco (marco bra) for reporting it
+
+  *  src/raddox/TField.prg
+     ! Fixed TObjectField:GetReferenceField to return proper key field
+       for linked table
+
 2010-11-30 13:31 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   *  demos/dbExplorer/dbExplorer.prg
      * added request to HB_NumToHex function
